@@ -2,6 +2,8 @@ package ru.olegzab.inventory.service;
 
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
+import ru.olegzab.inventory.dto.ItemDto;
+import ru.olegzab.inventory.dto.converter.ItemDtoConverter;
 import ru.olegzab.inventory.model.Item;
 import ru.olegzab.inventory.repository.ItemRepo;
 
@@ -11,15 +13,20 @@ import java.util.List;
 public class ItemServiceImpl implements ItemService {
     ItemRepo itemRepo;
 
-    public ItemServiceImpl(ItemRepo itemRepo) {
+    private final ItemDtoConverter itemDtoConverter;
+
+    private final ItemDtoConverter dtoItemConverter;
+
+    public ItemServiceImpl(ItemDtoConverter itemDtoConverter, ItemDtoConverter dtoItemConverter, ItemRepo itemRepo) {
+        this.itemDtoConverter = itemDtoConverter;
+        this.dtoItemConverter = dtoItemConverter;
         this.itemRepo = itemRepo;
     }
 
-
     @Override
-    public Item getItemById(Long id) {
-        return itemRepo.findById(id).orElseThrow(
-                () -> new EntityNotFoundException(String.format("Item with %s not found", id)));
+    public ItemDto getItemById(Long id) {
+        return itemDtoConverter.convertToDto(itemRepo.findById(id).orElseThrow(
+                () -> new EntityNotFoundException("Item with %s not found".formatted(id))));
     }
 
     @Override
@@ -41,4 +48,5 @@ public class ItemServiceImpl implements ItemService {
     public void deleteItem(Item item) {
         itemRepo.delete(item);
     }
+
 }
